# Agent

./: AGENTS.md  AUTOMATION_TRIGGER_TEST.md  README.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
openhands-agent-server/: pyproject.toml
openhands-agent-server/openhands/agent_server/: __main__.py  acp_auth_router.py  agent-server.spec  agent_profiles_router.py  api.py  bash_service.py  config.py  conversation_router.py  conversation_router_acp.py  conversation_service.py  desktop_service.py  event_service.py  extra_python_path.py  file_router.py  git_router.py  init_router.py  llm_router.py  logging_config.py  mcp_servers_router.py  meta_profiles_router.py  middleware.py  models.py  openai_router.py  openai_service.py  plugins_service.py  profiles_router.py  settings_router.py  skills_router.py  skills_service.py  sockets.py  workspaces_router.py
openhands-agent-server/openhands/agent_server/docker/: Dockerfile
openhands-agent-server/openhands/agent_server/docker_runtime/: __init__.py  proxy.py  registry.py  routers.py
openhands-agent-server/openhands/agent_server/openai/: router.py  service.py
openhands-agent-server/openhands/agent_server/persistence/: models.py  store.py
openhands-sdk/: pyproject.toml
openhands-sdk/openhands/sdk/: __init__.py
openhands-sdk/openhands/sdk/agent/: acp_agent.py  acp_models.py  agent.py  base.py  response_dispatch.py  skill_tool_permissions.py  utils.py
openhands-sdk/openhands/sdk/agent/prompts/: security_policy.j2  system_prompt.j2
openhands-sdk/openhands/sdk/context/: agent_context.py
openhands-sdk/openhands/sdk/context/condenser/: base.py  llm_summarizing_condenser.py  utils.py
openhands-sdk/openhands/sdk/context/prompts/: default_registry.py  presets.py
openhands-sdk/openhands/sdk/context/skills/: __init__.py  skill.py  utils.py
openhands-sdk/openhands/sdk/conversation/: base.py  conversation.py  event_store.py  request.py  state.py  types.py
openhands-sdk/openhands/sdk/conversation/goal/: controller.py
openhands-sdk/openhands/sdk/conversation/impl/: local_conversation.py  remote_conversation.py
openhands-sdk/openhands/sdk/event/: __init__.py  acp_tool_call.py  base.py  conversation_error.py  resume_transcript.py
openhands-sdk/openhands/sdk/event/llm_convertible/: message.py
openhands-sdk/openhands/sdk/extensions/installation/: info.py  metadata.py
openhands-sdk/openhands/sdk/git/: utils.py
openhands-sdk/openhands/sdk/hooks/: config.py  conversation_hooks.py  executor.py  manager.py
openhands-sdk/openhands/sdk/io/: memory.py
openhands-sdk/openhands/sdk/llm/: __init__.py  llm.py  llm_profile_store.py  meta_profile_store.py
openhands-sdk/openhands/sdk/llm/exceptions/: classifier.py
openhands-sdk/openhands/sdk/logger/: __init__.py  logger.py
openhands-sdk/openhands/sdk/lsp/: __init__.py  client.py  definition.py  exceptions.py  manager.py  tool.py  utils.py
openhands-sdk/openhands/sdk/mcp/: __init__.py  exceptions.py  tool.py  utils.py
openhands-sdk/openhands/sdk/observability/: laminar.py
openhands-sdk/openhands/sdk/plugin/: plugin.py  types.py
openhands-sdk/openhands/sdk/profiles/: __init__.py  agent_profile.py  resolver.py
openhands-sdk/openhands/sdk/secret/: secrets.py
openhands-sdk/openhands/sdk/security/: __init__.py  shell_parser.py  toolshield_helpers.py  toolshield_llm_analyzer.py
openhands-sdk/openhands/sdk/settings/: __init__.py  acp_providers.py  api_models.py  model.py
openhands-sdk/openhands/sdk/skills/: fork.py  skill.py  utils.py
openhands-sdk/openhands/sdk/subagent/: __init__.py  load.py  registry.py  schema.py  section_parser.py
openhands-sdk/openhands/sdk/testing/: test_llm.py
openhands-sdk/openhands/sdk/utils/: async_executor.py  pydantic_secrets.py  redact.py
openhands-tools/: pyproject.toml
openhands-tools/openhands/tools/apply_patch/: core.py
openhands-tools/openhands/tools/browser_use/: impl.py  logging_fix.py
openhands-tools/openhands/tools/delegate/: definition.py
openhands-tools/openhands/tools/file_editor/: editor.py
openhands-tools/openhands/tools/interactive_terminal/: definition.py  executor.py  impl.py
openhands-tools/openhands/tools/task/: manager.py
openhands-tools/openhands/tools/terminal/: definition.py
openhands-tools/openhands/tools/workflow/: __init__.py  definition.py  impl.py
openhands-workspace/: pyproject.toml
openhands-workspace/openhands/workspace/cloud/: workspace.py
openhands-workspace/openhands/workspace/docker/: workspace.py
openhands-workspace/openhands/workspace/remote_api/: workspace.py
(+349 files in other folders)
