[project]
name = "openhands-agent-server"
version = "1.22.0"
description = "OpenHands Agent Server - REST/WebSocket interface for OpenHands AI Agent"

requires-python = ">=3.12"
dependencies = [
  "aiosqlite==0.21.0",
  "alembic==1.17.0",
  "docker==7.1.0",
  "fastapi==0.129.0",
  "openhands-sdk==1.22.0",
  "pydantic==2.12.5",
  "sqlalchemy==2.0.44",
  "uvicorn==0.37.0",
  "websockets==15.0.1",
  "wsproto==1.2.0",
]

[project.urls]
Source = "https://github.com/OpenHands/software-agent-sdk"
Homepage = "https://github.com/OpenHands/software-agent-sdk"
Documentation = "https://docs.openhands.dev/sdk"
"Bug Tracker" = "https://github.com/OpenHands/software-agent-sdk/issues"

[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.agent_server*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
# Include Docker-related files and VSCode extensions
"openhands.agent_server" = [
  "docker/Dockerfile",
  "docker/wallpaper.svg",
  "vscode_extensions/**/*.json",
  "vscode_extensions/**/*.js",
]

[project.scripts]
agent-server = "openhands.agent_server.__main__:main"
