[project]
name = "openhands-sdk"
version = "1.22.0"
description = "OpenHands SDK - Core functionality for building AI agents"

requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol==0.8.1",
    "deprecation==2.1.0",
    "fakeredis[lua]==2.34.1",  # Explicit dependency for docket/fastmcp background tasks
    "fastmcp==3.2.0",
    "filelock==3.20.3",
    "httpx[socks]==0.28.1",
    "joserfc==1.6.4",
    "litellm==1.83.14",
    "pillow==12.2.0",
    "pydantic==2.12.5",
    "python-frontmatter==1.1.0",
    "python-json-logger==4.0.0",
    "tenacity==9.1.2",
    "websockets==15.0.1",
    "lmnr==0.7.47",
]

[project.urls]
Source = "https://github.com/OpenHands/software-agent-sdk"
Homepage = "https://github.com/OpenHands/software-agent-sdk"
Documentation = "https://docs.openhands.dev/sdk"
"Bug Tracker" = "https://github.com/OpenHands/software-agent-sdk/issues"

[project.optional-dependencies]
boto3 = ["boto3==1.40.52"]

[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.sdk*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.j2"]
