[project]
name = "openhands-tools"
version = "1.22.0"
description = "OpenHands Tools - Runtime tools for AI agents"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk==1.22.0",
    "bashlex==0.18",
    "binaryornot==0.4.4",
    "cachetools==5.5.2",
    "libtmux==0.53.0",
    "pydantic==2.12.5",
    "browser-use==0.11.9",
    "func-timeout==4.3.5",
    "tom-swe==1.0.3",
]

[project.urls]
Source = "https://github.com/OpenHands/software-agent-sdk"
Homepage = "https://github.com/OpenHands/software-agent-sdk"
Documentation = "https://docs.openhands.dev/sdk"
"Bug Tracker" = "https://github.com/OpenHands/software-agent-sdk/issues"

[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.tools*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed", "**/*.j2"]
"openhands.tools.preset.subagents" = ["*.md"]
