[project]
name = "openhands-workspace"
version = "1.22.0"
description = "OpenHands Workspace - Docker and container-based workspace implementations"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk==1.22.0",
    "openhands-agent-server==1.22.0",
    "pydantic==2.12.5",
]

[project.urls]
Source = "https://github.com/OpenHands/software-agent-sdk"
Homepage = "https://github.com/OpenHands/software-agent-sdk"
Documentation = "https://docs.openhands.dev/sdk"
"Bug Tracker" = "https://github.com/OpenHands/software-agent-sdk/issues"

[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.workspace*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
